--- a/src/DEA.csproj
+++ b/src/DEA.csproj
@@ -259,55 +259,53 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\Events\ChannelEvents.cs" />
-    <Compile Include="src\Events\Ready.cs" />
-    <Compile Include="src\Events\RoleEvents.cs" />
-    <Compile Include="src\Events\UserEvents.cs" />
-    <Compile Include="src\Modules\Administration.cs" />
-    <Compile Include="src\Modules\Crime.cs" />
-    <Compile Include="src\Modules\Gambling.cs" />
-    <Compile Include="src\Modules\Gangs.cs" />
-    <Compile Include="src\Modules\General.cs" />
-    <Compile Include="src\Modules\Moderation.cs" />
-    <Compile Include="src\Modules\NSFW.cs" />
-    <Compile Include="src\Modules\Owners.cs" />
-    <Compile Include="src\Modules\System.cs" />
-    <Compile Include="src\Preconditions\RequireCooldown.cs" />
-    <Compile Include="src\Preconditions\RequireGangLeader.cs" />
-    <Compile Include="src\Preconditions\RequireInGang.cs" />
-    <Compile Include="src\Preconditions\RequireAdmin.cs" />
-    <Compile Include="src\Preconditions\RequireBotOwner.cs" />
-    <Compile Include="src\Preconditions\RequireModerator.cs" />
-    <Compile Include="src\Preconditions\RequireNoGang.cs" />
-    <Compile Include="src\Preconditions\RequireNSFW.cs" />
-    <Compile Include="src\Preconditions\RequireRank.cs" />
-    <Compile Include="src\Program.cs" />
+    <Compile Include="Events\ChannelEvents.cs" />
+    <Compile Include="Events\Ready.cs" />
+    <Compile Include="Events\RoleEvents.cs" />
+    <Compile Include="Events\UserEvents.cs" />
+    <Compile Include="Modules\Administration.cs" />
+    <Compile Include="Modules\Crime.cs" />
+    <Compile Include="Modules\Gambling.cs" />
+    <Compile Include="Modules\Gangs.cs" />
+    <Compile Include="Modules\General.cs" />
+    <Compile Include="Modules\Moderation.cs" />
+    <Compile Include="Modules\NSFW.cs" />
+    <Compile Include="Modules\Owners.cs" />
+    <Compile Include="Modules\System.cs" />
+    <Compile Include="Preconditions\RequireCooldown.cs" />
+    <Compile Include="Preconditions\RequireGangLeader.cs" />
+    <Compile Include="Preconditions\RequireInGang.cs" />
+    <Compile Include="Preconditions\RequireAdmin.cs" />
+    <Compile Include="Preconditions\RequireBotOwner.cs" />
+    <Compile Include="Preconditions\RequireModerator.cs" />
+    <Compile Include="Preconditions\RequireNoGang.cs" />
+    <Compile Include="Preconditions\RequireNSFW.cs" />
+    <Compile Include="Preconditions\RequireRank.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Resources\Config.cs" />
-    <Compile Include="src\Events\MessageRecieved.cs" />
-    <Compile Include="src\Resources\Token.cs" />
-    <Compile Include="src\Services\Logger.cs" />
-    <Compile Include="src\Services\PrettyConsole.cs" />
-    <Compile Include="src\Services\RankHandler.cs" />
-    <Compile Include="src\Services\RecurringFunctions.cs" />
-    <Compile Include="src\Services\ServiceManager.cs" />
-    <Compile Include="src\SQLite\Models\Gang.cs" />
-    <Compile Include="src\SQLite\Models\Guild.cs" />
-    <Compile Include="src\SQLite\Models\Mute.cs" />
-    <Compile Include="src\SQLite\Models\User.cs" />
-    <Compile Include="src\SQLite\Repository\BaseRepository.cs" />
-    <Compile Include="src\SQLite\Repository\DatabaseContext.cs" />
-    <Compile Include="src\SQLite\Repository\GangRepository.cs" />
-    <Compile Include="src\SQLite\Repository\GuildRepository.cs" />
-    <Compile Include="src\SQLite\Repository\IRepository.cs" />
-    <Compile Include="src\SQLite\Repository\MuteRepository.cs" />
-    <Compile Include="src\SQLite\Repository\UserRepository.cs" />
+    <Compile Include="Resources\Config.cs" />
+    <Compile Include="Events\MessageRecieved.cs" />
+    <Compile Include="Resources\Token.cs" />
+    <Compile Include="Services\Logger.cs" />
+    <Compile Include="Services\PrettyConsole.cs" />
+    <Compile Include="Services\RankHandler.cs" />
+    <Compile Include="Services\RecurringFunctions.cs" />
+    <Compile Include="Services\ServiceManager.cs" />
+    <Compile Include="SQLite\Models\Gang.cs" />
+    <Compile Include="SQLite\Models\Guild.cs" />
+    <Compile Include="SQLite\Models\Mute.cs" />
+    <Compile Include="SQLite\Models\User.cs" />
+    <Compile Include="SQLite\Repository\BaseRepository.cs" />
+    <Compile Include="SQLite\Repository\DatabaseContext.cs" />
+    <Compile Include="SQLite\Repository\GangRepository.cs" />
+    <Compile Include="SQLite\Repository\GuildRepository.cs" />
+    <Compile Include="SQLite\Repository\IRepository.cs" />
+    <Compile Include="SQLite\Repository\MuteRepository.cs" />
+    <Compile Include="SQLite\Repository\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
