--- a/src/packages.config
+++ b/src/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Discord.Addons.InteractiveCommands" version="1.2.1" targetFramework="net462" />
+  <package id="Discord.Addons.InteractiveCommands" version="1.2.2" targetFramework="net462" />
   <package id="Discord.Net" version="1.0.0-rc-00652" targetFramework="net462" />
   <package id="Discord.Net.Commands" version="1.0.0-rc-00652" targetFramework="net462" />
   <package id="Discord.Net.Core" version="1.0.0-rc-00652" targetFramework="net462" />
@@ -8,10 +8,9 @@
   <package id="Discord.Net.Rpc" version="1.0.0-rc-00652" targetFramework="net462" />
   <package id="Discord.Net.WebSocket" version="1.0.0-rc-00652" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
-  <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net462" />
+  <package id="LiteDB" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.1" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.0" targetFramework="net462" />
