--- a/src/DEA.csproj
+++ b/src/DEA.csproj
@@ -268,17 +268,11 @@
     <Compile Include="Modules\NSFW.cs" />
     <Compile Include="Modules\Owners.cs" />
     <Compile Include="Modules\System.cs" />
+    <Compile Include="Preconditions\Require.cs" />
     <Compile Include="Preconditions\RequireCooldown.cs" />
-    <Compile Include="Preconditions\RequireGangLeader.cs" />
-    <Compile Include="Preconditions\RequireInGang.cs" />
-    <Compile Include="Preconditions\RequireAdmin.cs" />
-    <Compile Include="Preconditions\RequireBotOwner.cs" />
-    <Compile Include="Preconditions\RequireModerator.cs" />
-    <Compile Include="Preconditions\RequireNoGang.cs" />
-    <Compile Include="Preconditions\RequireNSFW.cs" />
-    <Compile Include="Preconditions\RequireRank.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Attributes.cs" />
     <Compile Include="Resources\Config.cs" />
     <Compile Include="Events\MessageRecieved.cs" />
     <Compile Include="Resources\Credentials.cs" />
@@ -286,20 +280,19 @@
     <Compile Include="Services\PrettyConsole.cs" />
     <Compile Include="Services\RankHandler.cs" />
     <Compile Include="Services\RecurringFunctions.cs" />
-    <Compile Include="Services\ServiceManager.cs" />
-    <Compile Include="SQLite\Models\Submodels\Channels.cs" />
-    <Compile Include="SQLite\Models\Gang.cs" />
-    <Compile Include="SQLite\Models\Guild.cs" />
-    <Compile Include="SQLite\Models\Submodels\Cooldowns.cs" />
-    <Compile Include="SQLite\Models\Submodels\Mute.cs" />
-    <Compile Include="SQLite\Models\Submodels\RankRole.cs" />
-    <Compile Include="SQLite\Models\Submodels\Roles.cs" />
-    <Compile Include="SQLite\Models\Submodels\Options.cs" />
-    <Compile Include="SQLite\Models\User.cs" />
-    <Compile Include="SQLite\Repository\GangRepository.cs" />
-    <Compile Include="SQLite\Repository\GuildRepository.cs" />
-    <Compile Include="SQLite\Repository\MuteRepository.cs" />
-    <Compile Include="SQLite\Repository\UserRepository.cs" />
+    <Compile Include="LiteDB\Models\Submodels\Channels.cs" />
+    <Compile Include="LiteDB\Models\Gang.cs" />
+    <Compile Include="LiteDB\Models\Guild.cs" />
+    <Compile Include="LiteDB\Models\Submodels\Cooldowns.cs" />
+    <Compile Include="LiteDB\Models\Submodels\Mute.cs" />
+    <Compile Include="LiteDB\Models\Submodels\RankRole.cs" />
+    <Compile Include="LiteDB\Models\Submodels\Roles.cs" />
+    <Compile Include="LiteDB\Models\Submodels\Options.cs" />
+    <Compile Include="LiteDB\Models\User.cs" />
+    <Compile Include="LiteDB\Repository\GangRepository.cs" />
+    <Compile Include="LiteDB\Repository\GuildRepository.cs" />
+    <Compile Include="LiteDB\Repository\MuteRepository.cs" />
+    <Compile Include="LiteDB\Repository\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
