--- a/src/DEA.csproj
+++ b/src/DEA.csproj
@@ -68,10 +68,6 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="LiteDB, Version=3.1.0.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
-      <HintPath>..\packages\LiteDB.3.1.0\lib\net35\LiteDB.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.EntityFrameworkCore, Version=1.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.EntityFrameworkCore.1.1.1\lib\net451\Microsoft.EntityFrameworkCore.dll</HintPath>
       <Private>True</Private>
@@ -118,6 +114,14 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Npgsql, Version=3.1.9.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Npgsql.3.1.9\lib\net451\Npgsql.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Npgsql.EntityFrameworkCore.PostgreSQL, Version=1.1.0.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Npgsql.EntityFrameworkCore.PostgreSQL.1.1.0\lib\net451\Npgsql.EntityFrameworkCore.PostgreSQL.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Remotion.Linq, Version=2.2.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
@@ -243,6 +247,10 @@
       <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -259,6 +267,8 @@
     <Compile Include="Events\Ready.cs" />
     <Compile Include="Events\RoleEvents.cs" />
     <Compile Include="Events\UserEvents.cs" />
+    <Compile Include="PostgreSQL\Repository\BaseRepository.cs" />
+    <Compile Include="PostgreSQL\Repository\DbContext.cs" />
     <Compile Include="Modules\Administration.cs" />
     <Compile Include="Modules\Crime.cs" />
     <Compile Include="Modules\Gambling.cs" />
@@ -280,14 +290,14 @@
     <Compile Include="Services\PrettyConsole.cs" />
     <Compile Include="Services\RankHandler.cs" />
     <Compile Include="Services\RecurringFunctions.cs" />
-    <Compile Include="LiteDB\Models\Gang.cs" />
-    <Compile Include="LiteDB\Models\Guild.cs" />
-    <Compile Include="LiteDB\Models\Mute.cs" />
-    <Compile Include="LiteDB\Models\User.cs" />
-    <Compile Include="LiteDB\Repository\GangRepository.cs" />
-    <Compile Include="LiteDB\Repository\GuildRepository.cs" />
-    <Compile Include="LiteDB\Repository\MuteRepository.cs" />
-    <Compile Include="LiteDB\Repository\UserRepository.cs" />
+    <Compile Include="PostgreSQL\Models\Gang.cs" />
+    <Compile Include="PostgreSQL\Models\Guild.cs" />
+    <Compile Include="PostgreSQL\Models\Mute.cs" />
+    <Compile Include="PostgreSQL\Models\User.cs" />
+    <Compile Include="PostgreSQL\Repository\GangRepository.cs" />
+    <Compile Include="PostgreSQL\Repository\GuildRepository.cs" />
+    <Compile Include="PostgreSQL\Repository\MuteRepository.cs" />
+    <Compile Include="PostgreSQL\Repository\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
