--- a/src/packages.config
+++ b/src/packages.config
@@ -8,7 +8,6 @@
   <package id="Discord.Net.Rpc" version="1.0.0-rc-00652" targetFramework="net462" />
   <package id="Discord.Net.WebSocket" version="1.0.0-rc-00652" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
-  <package id="LiteDB" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.1" targetFramework="net462" />
@@ -23,8 +22,9 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net462" />
+  <package id="Npgsql" version="3.1.9" targetFramework="net462" />
+  <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="1.1.0" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0-alpha-002" targetFramework="net462" />
-  <package id="SQLite" version="3.13.0" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
@@ -74,6 +74,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
