--- a/src/packages.config
+++ b/src/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Discord.Addons.InteractiveCommands" version="1.2.2" targetFramework="net462" />
-  <package id="Discord.Net" version="1.0.0-rc-00652" targetFramework="net462" />
-  <package id="Discord.Net.Commands" version="1.0.0-rc-00652" targetFramework="net462" />
-  <package id="Discord.Net.Core" version="1.0.0-rc-00652" targetFramework="net462" />
-  <package id="Discord.Net.Rest" version="1.0.0-rc-00652" targetFramework="net462" />
-  <package id="Discord.Net.Rpc" version="1.0.0-rc-00652" targetFramework="net462" />
-  <package id="Discord.Net.WebSocket" version="1.0.0-rc-00652" targetFramework="net462" />
+  <package id="Discord.Net" version="1.0.0-rc-00666" targetFramework="net462" />
+  <package id="Discord.Net.Commands" version="1.0.0-rc-00666" targetFramework="net462" />
+  <package id="Discord.Net.Core" version="1.0.0-rc-00666" targetFramework="net462" />
+  <package id="Discord.Net.Rest" version="1.0.0-rc-00666" targetFramework="net462" />
+  <package id="Discord.Net.Rpc" version="1.0.0-rc-00666" targetFramework="net462" />
+  <package id="Discord.Net.WebSocket" version="1.0.0-rc-00666" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.1" targetFramework="net462" />
@@ -22,9 +22,8 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net462" />
-  <package id="Npgsql" version="3.1.9" targetFramework="net462" />
-  <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="1.1.0" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0-alpha-002" targetFramework="net462" />
+  <package id="SQLite.Native" version="3.12.3" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
