--- a/src/packages.config
+++ b/src/packages.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Discord.Addons.InteractiveCommands" version="1.2.2" targetFramework="net462" />
-  <package id="Discord.Net" version="1.0.0-rc-00668" targetFramework="net462" />
-  <package id="Discord.Net.Commands" version="1.0.0-rc-00668" targetFramework="net462" />
-  <package id="Discord.Net.Core" version="1.0.0-rc-00668" targetFramework="net462" />
-  <package id="Discord.Net.Rest" version="1.0.0-rc-00668" targetFramework="net462" />
-  <package id="Discord.Net.Rpc" version="1.0.0-rc-00668" targetFramework="net462" />
-  <package id="Discord.Net.WebSocket" version="1.0.0-rc-00668" targetFramework="net462" />
+  <package id="Discord.Net" version="1.0.0-rc2-00679" targetFramework="net462" />
+  <package id="Discord.Net.Commands" version="1.0.0-rc2-00679" targetFramework="net462" />
+  <package id="Discord.Net.Core" version="1.0.0-rc2-00679" targetFramework="net462" />
+  <package id="Discord.Net.Rest" version="1.0.0-rc2-00679" targetFramework="net462" />
+  <package id="Discord.Net.Rpc" version="1.0.0-rc2-00679" targetFramework="net462" />
+  <package id="Discord.Net.Webhook" version="1.0.0-rc2-00679" targetFramework="net462" />
+  <package id="Discord.Net.WebSocket" version="1.0.0-rc2-00679" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
+  <package id="Microsoft.Data.Sqlite" version="1.1.0" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.EntityFrameworkCore.SqlServer" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Caching.Memory" version="1.1.1" targetFramework="net462" />
@@ -24,6 +27,8 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0-alpha-002" targetFramework="net462" />
+  <package id="SQLite" version="3.13.0" targetFramework="net462" />
+  <package id="SQLite.Native" version="3.12.3" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
