--- a/src/DEA.csproj
+++ b/src/DEA.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="1.0.0-rc2-00701" />
+    <PackageReference Include="Discord.Net" Version="1.0.0-rc" />
     <PackageReference Include="Discord.Net.Commands" Version="1.0.0-rc" />
-    <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc2-00701" />
+    <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc" />
     <PackageReference Include="Discord.Net.WebSocket" Version="1.0.0-rc" />
     <PackageReference Include="MongoDB.Bson" Version="2.4.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.4.3" />
