--- a/src/config.json
+++ b/src/config.json
@@ -12,6 +12,7 @@
   "minCharLength": 7,
   "messageCooldown": 30000,
   "errorColor": [255, 0, 0],
+  "muteColor": [255, 114, 14],
   "embedColors": [
     [255, 38, 154],
     [0, 255, 0],
@@ -27,15 +28,10 @@
   ],
   "prefix": "$",
   "readyMessage": "$info",
+  "inviteLink": "https://discordapp.com/oauth2/authorize?client_id=290823959669374987&scope=bot&permissions=8",
   "disabledEvents": [
     "RESUMED",
     "GUILD_SYNC",
-    "GUILD_DELETE",
-    "GUILD_UPDATE",
-    "GUILD_MEMBER_ADD",
-    "GUILD_MEMBER_REMOVE",
-    "GUILD_MEMBER_UPDATE",
-    "GUILD_MEMBERS_CHUNK",
     "GUILD_ROLE_CREATE",
     "GUILD_ROLE_DELETE",
     "GUILD_ROLE_UPDATE",
@@ -50,7 +46,6 @@
     "MESSAGE_REACTION_ADD",
     "MESSAGE_REACTION_REMOVE",
     "MESSAGE_REACTION_REMOVE_ALL",
-    "USER_UPDATE",
     "USER_NOTE_UPDATE",
     "USER_SETTINGS_UPDATE",
     "PRESENCE_UPDATE",
