GANG BANGS MY NIGGA!!

--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
   "lotteryOdds": 1.5,
   "lotteryMin": 2500,
   "lotteryMax": 10000,
-  "lotteryResponse": [
+  "lotteryResponses": [
     "CONGRATS MY MAN, you just won {0} in the goddamn lottery! Use `$info` for more information.",
     "Hot fucking pockets, you just won {0} in the lottery! Use `$info` for more information.",
     "Well sonny, looks like today is your goddamn lucky day, you just won {0} in the lottery! Use `$info` for more information.",
@@ -10,6 +10,9 @@
     "Sweet Baby Jesus you just won {0} in the fucking lottery! Use `$info` for more information.",
     "Well I'll be damned, you just won {0} in the goddamn lottery! Use `$info` for more information."
   ],
+  "gangBangOdds": 5,
+  "gangBangMin": 10000,
+  "gangBangSteal": 0.25,
   "cashPerMessage": 50,
   "minTransfer": 5,
   "transactionCut": 0.1,
