$clear, $togglefines, and new preconditions

--- a/src/config.json
+++ b/src/config.json
@@ -40,6 +40,10 @@
   "leaderboardCap": 10,
   "minCharLength": 7,
   "messageCooldown": 30000,
+  "minChill": 5,
+  "maxChill": 3600,
+  "minClear": 2,
+  "maxClear": 1000,
   "errorColor": [255, 0, 0],
   "muteColor": [255, 114, 14],
   "unmuteColor": [109, 237, 94],
@@ -47,6 +51,7 @@
   "banColor": [234, 12, 0],
   "unbanColor": [19, 255, 25],
   "warnColor": [255, 182, 32],
+  "clearColor": [0, 29, 255],
   "embedColors": [
     [255, 38, 154],
     [0, 255, 0],
@@ -69,9 +74,7 @@
     "CHANNEL_DELETE",
     "CHANNEL_UPDATE",
     "CHANNEL_PINS_UPDATE",
-    "MESSAGE_DELETE",
     "MESSAGE_UPDATE",
-    "MESSAGE_DELETE_BULK",
     "MESSAGE_REACTION_ADD",
     "MESSAGE_REACTION_REMOVE",
     "MESSAGE_REACTION_REMOVE_ALL",
